--- a/ansible-vagrant-esxi-tools/tasks/main.yml
+++ b/ansible-vagrant-esxi-tools/tasks/main.yml
@@ -23,8 +23,9 @@
     /tmp/vmare-ovftool.bundle --eulas-agreed
     
 - name: Remove file ovftool installer
-  file: path=/tmp/vmare-ovftool.bundle state= absent
-
+  ansible.builtin.file:
+    path: /tmp/vmare-ovftool.bundle
+    state: absent
 
 # - name: Add and configure management user
 #   shell: |
